reformat umap mandate recurrence table

--- a/content/payments/umap/mandates/recurring/create.mdx
+++ b/content/payments/umap/mandates/recurring/create.mdx
@@ -98,164 +98,109 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                     <summary>
                         <Text size="medium" marginBottom="none" paddingRight="medium">Possible values and descriptions of <code>frequency</code>, <code>recurrenceValue</code> and <code>recurrenceRule</code></Text>
                     </summary>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <th>frequency</th>
-                                <th>recurrenceValue</th>
-                                <th>recurrenceRule</th>
-                                <th>recurrence schedule</th>
-                            </tr>
-                            <tr>
-                                <td>daily</td>
-                                <td>0</td>
-                                <td>on</td>
-                                <td>daily</td>
-                            </tr>
-                            <tr>
-                                <td>weekly</td>
-                                <td>
-                                    1 - 7<br/>
-                                    {" "}<br/>
-                                    1 represents MONDAY<br/>
-                                    {" "}<br/>
-                                    7 represents SUNDAY
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every week on the weekday represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every week on any one weekday - from MONDAY to the weekday represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every week on any one weekday - from the weekday represented by <code>x</code> to SUNDAY<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>fortnightly</td>
-                                <td>
-                                    1 - 16<br/>
-                                    {" "}<br/>
-                                    1 represents 1st in the first fortnight and 15th in the second fortnight of every month<br/>
-                                    {" "}<br/>
-                                    15 represents 15th in the first fortnight and 30th (or last day of month for February) in the second fortnight of every month<br/>
-                                    {" "}<br/>
-                                    16 represents 15th in the first fortnight and last day in the second fortnight of every month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose that as per the <code>recurrenceValue</code> the first fortnight execution day of month is <code>x</code> and the second fortnight execution day of month is <code>y</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every month on the day of month represented by <code>x</code> and <code>y</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every month on any one day of month - from 1st to <code>x</code> and on any one day of the month - from 16th to <code>y</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every month on any one day of month - from <code>x</code> to 15th of the month and on any one day of the month - from <code>y</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>monthly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every month on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every month on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>bi monthly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every 2nd month on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every 2nd month on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every 2nd month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>quarterly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every 3rd month on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every 3rd month on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every 3rd month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>half yearly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every 6th month on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every 6th month on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every 6th month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>half yearly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every year on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every year on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every year month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <Tabs
+                        tabs={[
+                            {
+                                key: "tab1",
+                                label: "as presented",
+                                content:(
+                                    <Text>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <th>frequency</th>
+                                                    <th>as presented</th>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceValue</th>
+                                                    <td>0</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceRule</th>
+                                                    <td>
+                                                        <p>on</p>
+                                                        <p>pre debit notification, execution is triggered as and when the merchant makes pre debit notification / execution API calls to UMAP</p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </Text>
+                                ),
+                            },
+                            {
+                                key: "tab2",
+                                label: "daily",
+                                content:(
+                                    <Text>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <th>frequency</th>
+                                                    <th>daily</th>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceValue</th>
+                                                    <td>0</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceRule</th>
+                                                    <td>
+                                                        <p>on</p>
+                                                        <p>once every day</p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </Text>
+                                ),
+                            },
+                            {
+                                key: "tab3",
+                                label: "periodic",
+                                content:(
+                                    <Text>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <th>frequency</th>
+                                                    <th>weekly</th>
+                                                    <th>fortnightly</th>
+                                                    <th>monthly, bi monthly, quarterly, half yearly, yearly</th>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceValue</th>
+                                                    <td>1-7</td>
+                                                    <td>1-16</td>
+                                                    <td>1-31</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceRule</th>
+                                                    <td>
+                                                        <img
+                                                            src="https://storage.googleapis.com/strapi-assets/latest/recurrence/recurrence.png"
+                                                            alt="Bridge"
+                                                        />          
+                                                    </td>
+                                                    <td>
+                                                        <img
+                                                            src="https://storage.googleapis.com/strapi-assets/latest/recurrence/recurrence.png"
+                                                            alt="Bridge"
+                                                        />          
+                                                    </td>
+                                                    <td>
+                                                        <img
+                                                            src="https://storage.googleapis.com/strapi-assets/latest/recurrence/recurrence.png"
+                                                            alt="Bridge"
+                                                        />          
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </Text>
+                                ),
+                            }
+                        ]}
+                    />
                 </details>
             </Card>
             <Callout type="warning">
@@ -413,164 +358,109 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                     <summary>
                         <Text size="medium" marginBottom="none" paddingRight="medium">Possible values and descriptions of <code>frequency</code>, <code>recurrenceValue</code> and <code>recurrenceRule</code></Text>
                     </summary>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <th>frequency</th>
-                                <th>recurrenceValue</th>
-                                <th>recurrenceRule</th>
-                                <th>recurrence schedule</th>
-                            </tr>
-                            <tr>
-                                <td>daily</td>
-                                <td>0</td>
-                                <td>on</td>
-                                <td>daily</td>
-                            </tr>
-                            <tr>
-                                <td>weekly</td>
-                                <td>
-                                    1 - 7<br/>
-                                    {" "}<br/>
-                                    1 represents MONDAY<br/>
-                                    {" "}<br/>
-                                    7 represents SUNDAY
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every week on the weekday represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every week on any one weekday - from MONDAY to the weekday represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every week on any one weekday - from the weekday represented by <code>x</code> to SUNDAY<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>fortnightly</td>
-                                <td>
-                                    1 - 16<br/>
-                                    {" "}<br/>
-                                    1 represents 1st in the first fortnight and 15th in the second fortnight of every month<br/>
-                                    {" "}<br/>
-                                    15 represents 15th in the first fortnight and 30th (or last day of month for February) in the second fortnight of every month<br/>
-                                    {" "}<br/>
-                                    16 represents 15th in the first fortnight and last day in the second fortnight of every month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose that as per the <code>recurrenceValue</code> the first fortnight execution day of month is <code>x</code> and the second fortnight execution day of month is <code>y</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every month on the day of month represented by <code>x</code> and <code>y</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every month on any one day of month - from 1st to <code>x</code> and on any one day of the month - from 16th to <code>y</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every month on any one day of month - from <code>x</code> to 15th of the month and on any one day of the month - from <code>y</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>monthly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every month on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every month on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>bi monthly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every 2nd month on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every 2nd month on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every 2nd month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>quarterly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every 3rd month on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every 3rd month on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every 3rd month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>half yearly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every 6th month on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every 6th month on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every 6th month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>half yearly</td>
-                                <td>
-                                    1 - 31<br/>
-                                    {" "}<br/>
-                                    1 represents 1st of the month<br/>
-                                    {" "}<br/>
-                                    31 represents 31st of the month<br/>
-                                </td>
-                                <td>on, before, after</td>
-                                <td>
-                                    Suppose <code>recurrenceValue</code> is <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>on</code> then the mandate will be executed every year on the day of month represented by <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>before</code> then the mandate can be executed every year on any one day of month - from 1st to <code>x</code><br/>
-                                    {" "}<br/>
-                                    If <code>recurrenceRule</code> is <code>after</code> then the mandate can be executed every year month on any one day of month - from <code>x</code> to the last day of the month<br/>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <Tabs
+                        tabs={[
+                            {
+                                key: "tab1",
+                                label: "as presented",
+                                content:(
+                                    <Text>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <th>frequency</th>
+                                                    <th>as presented</th>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceValue</th>
+                                                    <td>0</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceRule</th>
+                                                    <td>
+                                                        <p>on</p>
+                                                        <p>pre debit notification, execution is triggered as and when the merchant makes pre debit notification / execution API calls to UMAP</p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </Text>
+                                ),
+                            },
+                            {
+                                key: "tab2",
+                                label: "daily",
+                                content:(
+                                    <Text>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <th>frequency</th>
+                                                    <th>daily</th>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceValue</th>
+                                                    <td>0</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceRule</th>
+                                                    <td>
+                                                        <p>on</p>
+                                                        <p>once every day</p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </Text>
+                                ),
+                            },
+                            {
+                                key: "tab3",
+                                label: "periodic",
+                                content:(
+                                    <Text>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <th>frequency</th>
+                                                    <th>weekly</th>
+                                                    <th>fortnightly</th>
+                                                    <th>monthly, bi monthly, quarterly, half yearly, yearly</th>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceValue</th>
+                                                    <td>1-7</td>
+                                                    <td>1-16</td>
+                                                    <td>1-31</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>recurrenceRule</th>
+                                                    <td>
+                                                        <img
+                                                            src="https://storage.googleapis.com/strapi-assets/latest/recurrence/recurrence.png"
+                                                            alt="Bridge"
+                                                        />          
+                                                    </td>
+                                                    <td>
+                                                        <img
+                                                            src="https://storage.googleapis.com/strapi-assets/latest/recurrence/recurrence.png"
+                                                            alt="Bridge"
+                                                        />          
+                                                    </td>
+                                                    <td>
+                                                        <img
+                                                            src="https://storage.googleapis.com/strapi-assets/latest/recurrence/recurrence.png"
+                                                            alt="Bridge"
+                                                        />          
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </Text>
+                                ),
+                            }
+                        ]}
+                    />
                 </details>
             </Card>
             <Callout type="warning">
