add autopay key features image in umap autopay page

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -69,14 +69,10 @@ and UMAP takes care of notifying the customer and executing / debiting the custo
 
 #### Key Features
 
-Some key features of our UPI Mandate Solutions are as follows -
-
--   Single API to create create any type of UPI Mandate whether that is a recurring or one-time mandate setup via intent or collect
--   Reduced setup and execution drop offs with specifying first execution amount
--   Reduced merchant touchpoints with Auto Execute and Auto Pre-notify features
--   Reduced mandate revocability by leveraging customer non revocability flags
--   Enhanced merchant notifications to give the correct status of a mandate for any merchant or end user action on the mandate with accurate NPCI error codes and responses in case of failures
--   Lesser mandate execution failures with automatic retries built in by default
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/autopay-key-features/autopay-key-features.png"
+    alt="Bridge"
+/>
 
 #### UPI autopay statuses
 
